<resources>
    <string name="app_name">Intelligent Mobile Development</string>

    <string name="countInitialValue">0</string>
    <string name="messageHint">Enter Your Message Here</string>
    <string name="messageReceived">Message Received</string>

    <string name="openWebsite">Open Website</string>
    <string name="openLocation">Open Location</string>
    <string name="shareText">Share This Text</string>

    <string name="donutDescription">Donuts are glazed and sprinkled with candy.</string>
    <string name="iceCreamDescription">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyoDescription">FroYo is premier self-serve frozen yogurt.</string>
    <string name="donutOrderMessage">You ordered a donut.</string>
    <string name="iceCreamOrderMessage">You ordered an ice cream sandwich.</string>
    <string name="froyoOrderMessage">You ordered a FroYo.</string>

    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="sports_info_placeholder">Here is some news</string>
    <string-array name="sports_titles">
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Cycling</item>
        <item>Golf</item>
        <item>Running</item>
        <item>Soccer</item>
        <item>Swimming</item>
        <item>Table Tennis</item>
        <item>Tennis</item>
    </string-array>

    <string-array name="sports_info">
        <item>Here is some Baseball news!</item>
        <item>Here is some Badminton news!</item>
        <item>Here is some Basketball news!</item>
        <item>Here is some Bowling news!</item>
        <item>Here is some Cycling news!</item>
        <item>Here is some Golf news!</item>
        <item>Here is some Running news!</item>
        <item>Here is some Soccer news!</item>
        <item>Here is some Swimming news!</item>
        <item>Here is some Table Tennis news!</item>
        <item>Here is some Tennis news!</item>
    </string-array>

    <array name="sports_images">
        <item>@drawable/img_baseball</item>
        <item>@drawable/img_badminton</item>
        <item>@drawable/img_basketball</item>
        <item>@drawable/img_bowling</item>
        <item>@drawable/img_cycling</item>
        <item>@drawable/img_golf</item>
        <item>@drawable/img_running</item>
        <item>@drawable/img_soccer</item>
        <item>@drawable/img_swimming</item>
        <item>@drawable/img_tabletennis</item>
        <item>@drawable/img_tennis</item>
    </array>

    <string name="instructions">Enter a book name, or part of a book name, or just some text from a book to find the full book title and who wrote the book!</string>
    <string name="button_text">Search Books</string>
    <string name="input_hint">Book Title</string>
    <string name="no_results">"No Results Found"</string>
    <string name="loading">Loading...</string>
    <string name="no_search_term">Please enter a search term</string>
    <string name="no_network">Please check your network connection and try again.</string>

    <!-- Button label for blue button -->
    <string name="blue_button">Blue</string>
    <!-- Button label for green button -->
    <string name="green_button">Green</string>
    <!-- Button label for red button -->
    <string name="red_button">Red</string>
    <!-- Button label for black button -->
    <string name="black_button">Black</string>
    <!-- Default string for count TextView -->
    <string name="default_count">0</string>
    <!-- Button label for Count button -->
    <string name="count_button">Count</string>
    <!-- Button label for Reset button -->
    <string name="reset_button">Reset</string>
</resources>
